tests/snapshots/run_wpt_conformance__trtx_roundEven_float32_positive_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "round_even.https.any.js",
    "roundEven float32 positive 0D scalar",
    "trtx",
    "PASS",
)
